design additional strains and add new code to extract ectodomain sequences

--- a/non-pipeline_analyses/library_design/notebooks/design_HA_inserts.ipynb
+++ b/non-pipeline_analyses/library_design/notebooks/design_HA_inserts.ipynb
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "dd3d4596-f0d1-4a98-967b-edc3144aff99",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "d2d3f3d6-6ca0-4dc2-8cfc-eefe1915a0c7",
    "metadata": {},
    "outputs": [
@@ -580,7 +580,7 @@
        "[152 rows x 4 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "4d9fbeac-ae61-4fb6-b245-de27e5271b17",
    "metadata": {},
    "outputs": [],
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0db65251-80f7-40bc-80f6-c61ba8fe7d6f",
    "metadata": {},
    "outputs": [],
@@ -666,10 +666,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0b86198b-0680-4c46-ad4b-fbf7a68901fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File '../results/ordersheets/vaccine_inserts.csv' exists, reading that file and NOT regenerating barcodes.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>strain</th>\n",
+       "      <th>genbank</th>\n",
+       "      <th>name</th>\n",
+       "      <th>sequence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A/Croatia/10136RV/2023_H3N2</td>\n",
+       "      <td>PV262858_D202A</td>\n",
+       "      <td>H3N2_77_bc1</td>\n",
+       "      <td>catttgtagctacagatgcagacacacaaaaaatacctggaaatga...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A/Croatia/10136RV/2023_H3N2</td>\n",
+       "      <td>PV262858_D202A</td>\n",
+       "      <td>H3N2_77_bc2</td>\n",
+       "      <td>catttgtagctacagatgcagacacacaaaaaatacctggaaatga...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        strain         genbank         name  \\\n",
+       "0  A/Croatia/10136RV/2023_H3N2  PV262858_D202A  H3N2_77_bc1   \n",
+       "1  A/Croatia/10136RV/2023_H3N2  PV262858_D202A  H3N2_77_bc2   \n",
+       "\n",
+       "                                            sequence  \n",
+       "0  catttgtagctacagatgcagacacacaaaaaatacctggaaatga...  \n",
+       "1  catttgtagctacagatgcagacacacaaaaaatacctggaaatga...  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "design_inserts(\n",
     "    subtype = 'H3N2',\n",
@@ -698,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "61b51130-2093-4462-a905-59d961dfaffb",
    "metadata": {},
    "outputs": [],
@@ -706,7 +774,9 @@
     "inserts_df = pd.concat([vaccine_inserts])\n",
     "\n",
     "# Save ordersheet\n",
-    "inserts_df[['name', 'sequence']].to_csv(os.path.join(ordersheetsdir, '2025-05-16_ordersheet.csv'), index=False)"
+    "inserts_df[['name', 'sequence']].to_csv(os.path.join(ordersheetsdir, '2025-05-16_ordersheet.csv'), index=False)\n",
+    "\n",
+    "## Manually added a Lisboa/188 strain to this list!"
    ]
   },
   {
